# ldsc

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.bench-gpu  Dockerfile.bench-pgo  Dockerfile.bench-py  README.md  build.rs  release.toml  settings.json  settings.local.json  test_rust.sh  testing.md  typst-docs-reference.md
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  release.yml  wasm-deploy.yml  windows-build.yml
docs/: architecture.md  aws-batch-bench.md  aws-compute.md  countsketch-math-analysis.md  countsketch-math-analysis.py  cpu-perf-notes.md  feature-parity.md  gcta-source-audit.md  gpu-feasibility.md  h2-masking-simulation.md  handoff-l2-perf.md  hpc.md  ldsc++.md  ldsc_paper.md  ldsc_supplementary_note.md  pan-ukbb-summary.md  per-chr-parallelism-analysis.md  perf-log.md  performance-deep-dive.md  plan-fused-subsample-countsketch.md  py2-issue-lessons.md  py2-issues-detailed-review.md  py2-issues-summary.md  py2-vs-py3-notes.md  python-parity-adversarial.md  quickld_paper.md  r-to-rust-rewrite-lessons.md  theory.md  tutorial-validation.md  tutorial.md  ukbb-ldscore-workflow.md
docs/pan-ukbb/: downloads.md  h2-manifest.md  hail-format.md  heritability-estimation.md  ld-scores-and-matrices.md  manifest.md  overview.md  per-phenotype-files.md  quality-control.md
ldsc-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml
ldsc-web/.cargo/: config.toml
ldsc-web/assets/: chrome.css  inner_worker.js  palette.css  worker.js
ldsc-web/src/: main.rs  worker.rs
ldsc-web/src/components/: banner.rs  charts.rs  file_upload.rs  footer.rs  l2_panel.rs  mod.rs  navbar.rs  preprint_panel.rs  worker_client.rs
paper/: main.typ  refs.bib  sn-article.typ  sn-theorems.typ
preprint/: main.typ  refs.bib  review_notes.md  template.typ
preprint/scripts/: build_web_artifact.sh  compare_gcta_ldsc.py  generate_figures.py  simulate_h2_recovery.py
scripts/: _ldsc_wrapper.py  aws-bench.sh  aws-build-deps.sh  aws-gpu-bench.sh  aws-gpu-build-deps.sh  aws-gpu-setup.sh  aws-setup.sh  aws-sweep.sh  bench-entrypoint.sh  bench-sketch.sh  bench_l2.sh  bench_l2_py3_vs_rust.sh  bench_l2_rust_500k_hyperfine.sh  bench_l2_threads.sh  bench_ukbb_py3_vs_rust.sh  biobank-bench.sh  biobank-dsweep.sh  biobank-masksweep.sh  build_pgo.sh  check_l2_tiny_py_vs_rust.sh  gpu-biobank-bench.sh  local-perf-gate.sh  make_synthetic_biobank.py  newfeatures-bench.sh  panukbb_prepare_sumstats.py  pgo-sweep-entrypoint.sh  python-biobank-bench.sh  verify_parity_all.sh  verify_parity_h2.sh  verify_parity_l2.sh  verify_parity_munge.sh
src/: bed.rs  blas.rs  cli.rs  cts_annot.rs  frame.rs  gpu.rs  h2.rs  irwls.rs  jackknife.rs  l2.rs  la.rs  ldscore.rs  lib.rs  main.rs  make_annot.rs  munge.rs  parse.rs  regressions.rs  wasm_simd.rs
src/l2/: bitpacked.rs  compute.rs  io.rs  mod.rs  normalize.rs  snp_stats.rs  window.rs
tests/: integration.rs
wasm-bench/: Cargo.toml  bench.sh
wasm-bench/.cargo/: config.toml
wasm-bench/src/: main.rs
