[package]
name          = "ldsc"
version       = "0.3.1"
edition       = "2024"
description   = "LD Score Regression — fast Rust reimplementation of Bulik-Sullivan et al. LDSC"
license       = "GPL-3.0-only"
authors       = ["Sharif Haason"]
repository    = "https://github.com/sharifhsn/ldsc"
homepage      = "https://github.com/sharifhsn/ldsc"
documentation = "https://github.com/sharifhsn/ldsc#readme"
readme        = "README.md"
keywords      = ["genomics", "gwas", "statistics", "bioinformatics", "ldsc"]
categories    = ["command-line-utilities", "science"]
exclude       = [
  "data/*",
  "*.bed",
  "*.bim",
  "*.fam",
  "settings*.json",
  "test_rust.sh",
  "ldsc.wiki/*",
  "ldsc_py/*",
  "bed-reader/*",
  "cubecl/*",
  "docs/ldsc_paper.md",
  "docs/ldsc_supplementary_note.md",
]

[dependencies]
# Data munging — replaces pandas in munge_sumstats.py.
# decompress feature required for transparent .gz decompression in LazyCsvReader.
polars = { version = "0.53", features = ["lazy", "csv", "decompress", "strings"] }

faer = "0.24.0"

# Data-parallelism — parallelises block jackknife (replaces sequential for-loop + GIL)
rayon = "1"

# Statistical distributions — replaces scipy.stats.chi2 for p-value derivation.
statrs = "0.18"

# CLI argument parsing — replaces argparse in ldsc.py and munge_sumstats.py
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Gzip compression for output files (.ldscore.gz, .sumstats.gz)
flate2 = "1"

# Bzip2 decompression for .bz2 inputs
bzip2-rs = "0.1"

# Temp files for on-the-fly .bz2 decompression
tempfile = "3"

# Bounded channel for double-buffered BED reading (reader thread → compute thread)
crossbeam-channel = "0.5"
cubecl = { version = "=0.10.0-pre.2", features = ["cuda"], optional = true }
cubek-matmul = { version = "=0.2.0-pre.2", optional = true }
tokio = { version = "1.50.0", features = ["full"] }

# mimalloc — use for musl builds where the default allocator is slow under rayon parallelism.
# Builds mimalloc from C source (self-contained, no system dependency).
mimalloc = { version = "0.1", optional = true }
fastrand = "2.3.0"

# Memory-mapped I/O for BED files — zero-copy reads, better for GPFS/HPC.
memmap2 = "0.9"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1

[features]
gpu = ["dep:cubecl", "dep:cubek-matmul"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
