# The root Cargo.toml is *both* the `ldsc` package manifest AND the
# workspace root. The workspace adds the `ldsc-web/` Leptos frontend
# as a sibling member (path-deps on `ldsc`). `cargo publish` from the
# root only publishes `ldsc`, ignoring `ldsc-web` (it's `publish =
# false`).
[workspace]
members = [".", "ldsc-web"]
resolver = "2"

[package]
name          = "ldsc"
version       = "0.5.0"
edition       = "2024"
description   = "LD Score Regression — fast Rust reimplementation of Bulik-Sullivan et al. LDSC"
license       = "GPL-3.0-only"
authors       = ["Sharif Haason"]
repository    = "https://github.com/sharifhsn/ldsc"
homepage      = "https://github.com/sharifhsn/ldsc"
documentation = "https://github.com/sharifhsn/ldsc#readme"
readme        = "README.md"
keywords      = ["genomics", "gwas", "statistics", "bioinformatics", "ldsc"]
categories    = ["command-line-utilities", "science"]
exclude       = [
  "data/*",
  "*.bed",
  "*.bim",
  "*.fam",
  "settings*.json",
  "test_rust.sh",
  "ldsc.wiki/*",
  "ldsc_py/*",
  "ldsc_py2/*",
  "ldsc_py3/*",
  "bed-reader/*",
  "cubecl/*",
  "paper/*",
  "preprint/*",
  "docs/ldsc_paper.md",
  "docs/ldsc_supplementary_note.md",
  "docs/perf-log.md",
  "docs/h2-masking-simulation.md",
  "docs/py2-*.md",
  "docs/pan-ukbb/*",
  "docs/handoff-l2-perf.md",
  "docs/cpu-perf-notes.md",
  "docs/aws-*.md",
  "docs/quickld_paper.md",
  "docs/r-to-rust-rewrite-lessons.md",
  "Dockerfile.bench*",
  "Dockerfile.marker*",
  "scripts/marker-pdf*",
  "scripts/*.py",
  "CLAUDE.md",
  "docs/plan-*",
  "AGENTS.md",
  "testing.md",
]

[dependencies]
# Note: TSV parsing is handled in src/frame.rs (line-split + flate2 / bzip2-rs
# for decompression). Replaced polars 0.53 to enable wasm32-unknown-unknown
# builds — polars' `decompress` (zlib-ng), `psm`, and `home` crates do not
# compile to WASM; sumstats / LD-score files don't need lazy planning.

# faer: explicit feature list because the default `rand` feature pulls in
# rand 0.9 → getrandom 0.3.4, which doesn't compile to wasm32 without the
# `wasm_js` backend cfg. We don't use faer's random-matrix samplers, so
# dropping `rand` here is free. The `rayon` feature is added back below
# under the `cfg(not(target_arch = "wasm32"))` target table because spindle
# / atomic-wait don't compile to wasm32 either.
faer = { version = "0.24.0", default-features = false, features = ["std", "linalg"] }

# Data-parallelism — parallelises block jackknife (replaces sequential for-loop + GIL).
# On wasm32 this builds in single-threaded mode (rayon's built-in sequential
# fallback); a future wasm-bindgen-rayon thread-pool init in ldsc-web will
# upgrade it to Web Worker parallelism.
rayon = "1"

# Statistical distributions — replaces scipy.stats.chi2 for p-value derivation.
statrs = "0.18"

# CLI argument parsing — replaces argparse in ldsc.py and munge_sumstats.py
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Gzip compression for output files (.ldscore.gz, .sumstats.gz)
flate2 = "1"

# Bzip2 decompression for .bz2 inputs
bzip2-rs = "0.1"

# Temp files for on-the-fly .bz2 decompression
tempfile = "3"

cubecl = { version = "=0.10.0-pre.2", features = ["cuda"], optional = true }
cubek-matmul = { version = "=0.2.0-pre.2", optional = true }
# mimalloc — use for musl builds where the default allocator is slow under rayon parallelism.
# Builds mimalloc from C source (self-contained, no system dependency).
mimalloc = { version = "0.1", optional = true }
fastrand = "2.3.0"

# Memory-mapped I/O for BED files — zero-copy reads, better for GPFS/HPC.
# Only used by `--mmap` on native; the wasm32 build never reaches that path.
memmap2 = "0.9"

# Cross-target Instant: `std::time::Instant::now()` panics on
# `wasm32-unknown-unknown` ("time not implemented on this platform").
# `web-time` is a drop-in replacement that delegates to
# `performance.now()` on wasm and `std::time::Instant` everywhere else.
web-time = "1"

# ── Native-only deps / features ──────────────────────────────────────────────
# Cargo unions feature sets across [dependencies] and [target.*.dependencies]
# tables, so this adds `rayon` to the base `["std","linalg"]` set above —
# but only when building for a non-wasm target.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faer = { version = "0.24.0", default-features = false, features = ["rayon"] }

# ── WASM-only deps ───────────────────────────────────────────────────────────
# statrs 0.18 → nalgebra 0.33 → rand 0.8 → rand_core 0.6 → getrandom 0.2.17.
# The `js` feature gives getrandom 0.2 a real entropy source backed by the
# Web Crypto API on wasm32; without it the build fails with the canonical
# "wasm*-unknown-unknown targets are not supported by default" error.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1

[features]
gpu = ["dep:cubecl", "dep:cubek-matmul"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
