# ldsc-web — Leptos CSR frontend that runs `ldsc` in the browser.
#
# Deploys to https://sharifhsn.github.io/ldsc/ as a GitHub Pages
# project page. Built with `trunk build --release --public-url /ldsc/`.
#
# Multi-threaded WASM via wasm-bindgen-rayon (workstream G).
# coi-serviceworker provides the COOP/COEP polyfill that
# SharedArrayBuffer needs under GH Pages.

[package]
name        = "ldsc-web"
version     = "0.1.0"
edition     = "2024"
description = "Leptos CSR frontend for ldsc"
license     = "GPL-3.0-only"
publish     = false

[dependencies]
# Path-dep on the workspace root crate. ldsc is built for the same
# wasm32-unknown-unknown target (the root Cargo.toml's
# `[target.'cfg(target_arch = "wasm32")'.dependencies]` block handles
# getrandom; faer's rayon feature is auto-off on wasm).
ldsc = { path = ".." }

# Leptos client-side rendering. `csr` feature picks up the hydration-free
# build appropriate for a static GH Pages deploy.
leptos = { version = "0.8", features = ["csr"] }

# wasm-bindgen / web-sys for File / FileReader / Blob.
wasm-bindgen        = "0.2"
wasm-bindgen-futures = "0.4"
js-sys              = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "ProgressEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    # Web Worker bits — main thread spawns the worker, worker uses
    # FileReaderSync to chunk-read the uploaded BED.
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "FileReaderSync",
    "HtmlCollection",
    "HtmlHeadElement",
    "Location",
    "ErrorEvent",
    # Navigator.hardwareConcurrency for the worker pool size cap.
    "Navigator",
] }

# Bridge from the worker's wasm-bindgen exports to JS via
# typed serde. We use this to round-trip the L2Output struct
# (l2 / maf / wall_seconds) back to the main thread.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Convenience wrappers for File / FileReader (Promise-friendly).
gloo-file   = { version = "0.3", features = ["futures"] }
gloo-events = "0.2"

# `web_sys::File` is `!Send`, but Leptos signals (which we use to
# stash the picked File between the upload row and the L2 panel)
# require `Send`. SendWrapper makes any `T` `Send` by panicking if
# you ever try to access it from a different thread — fine on
# wasm32 where there's only one (main) thread that can touch web-sys
# values anyway.
send_wrapper = "0.6"

# Browser console panic hook for legible errors during dev.
console_error_panic_hook = "0.1"

# Logging through the JS console — useful for trace! / debug! during dev.
tracing            = "0.1"
tracing-wasm       = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# Plotters histograms / scatter rendered into a <canvas>.
plotters        = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "histogram", "all_series"] }
plotters-canvas = "0.3"

# Error helper consistent with the lib crate.
anyhow = "1"

# Wasm-safe Instant replacement (delegates to `performance.now()` on
# wasm32, works in both main thread and Workers). Required because
# `std::time::Instant::now()` on `wasm32-unknown-unknown` panics with
# "time not implemented on this platform" — the root cause of the
# original `worker_h2_demo` trap (initially misdiagnosed as a
# `passArrayF64ToWasm0` allocator issue; see Workstream L probe sweep).
web-time = "1"

# Multi-threaded GEMM (workstream G — manual SAB worker pool).
# wasm-bindgen-rayon was attempted but the bundler-mode
# `workerHelpers.js` ships an `import('../../..')` that resolves to
# `/ldsc/snippets/` (a directory with no index entry) under trunk's
# static-copy snippet layout, hanging the inner worker import. We
# instead spawn our own inner workers from `assets/inner_worker.js`
# and coordinate via raw Atomics on SAB-backed wasm linear memory.
# See `src/wasm_simd.rs::pool` for the implementation.
